# hdk-explorations

./: Cargo.toml  README.md  default.nix
.github/workflows/: main.yml
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
zomes/linky/: Cargo.toml
zomes/linky/src/: lib.rs
zomes/linky/tests/: linky_tests.rs
zomes/nifty/: Cargo.toml
zomes/nifty/src/: lib.rs
zomes/nifty/tests/: behavior.rs  nifty_tests.rs
