[package]
name = "linky"
version = "0.0.1"
authors = ["harlantwood", "code@harlantwood.net"]
edition = "2018"

[lib]
name = "linky"
crate-type = ["cdylib", "rlib"]

[dependencies]
nifty = { path= "../nifty"}
hdk = "0.0.116"
holo_hash = {version = "*", features = ["encoding"]}
serde = "1"

[dev-dependencies]
holochain = { version = "0.0.119", default-features = false, features = ["test_utils"] }
tokio = {version = "1.3", features = ["full"]}
futures = { version = "0.3.1", default-features = false }
